# TitanInfer

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: chaos.yml  ci.yml  quality.yml
benchmarks/: conv_benchmark.cpp  inference_benchmark.cpp  matrix_benchmark.cpp  thread_pool_benchmark.cpp
docker/cluster/: Dockerfile.controller  Dockerfile.node  chaos_test.sh  docker-compose.yml  loadgen.py
docs/: ARCHITECTURE.md  PERFORMANCE.md
examples/: CMakeLists.txt  batch_processing.cpp  c_api_usage.c  simple_inference.cpp
include/titaninfer/: TitanInfer.hpp  exceptions.hpp  logger.hpp  model_handle.hpp  quantized_tensor.hpp  tensor.hpp  titaninfer_c.h
include/titaninfer/engine/: cluster_controller.hpp  dynamic_batcher.hpp  fusion.hpp  inference_engine.hpp  model_compiler.hpp  model_server.hpp  thread_pool.hpp
include/titaninfer/io/: format.hpp  model_parser.hpp  model_serializer.hpp
include/titaninfer/layers/: activation_layer.hpp  conv2d_layer.hpp  dense_layer.hpp  flatten_layer.hpp  fused_layers.hpp  layer.hpp  pooling_layers.hpp  quantized_dense_layer.hpp  sequential.hpp
include/titaninfer/ops/: activations.hpp  conv_ops.hpp  matrix_ops.hpp  matrix_ops_simd.hpp  quantized_ops.hpp
proto/: controller.proto
scripts/: build.bat  build.sh  export_to_titan.py  run_all_tests.sh
src/: CMakeLists.txt  logger.cpp  model_handle.cpp  quantized_tensor.cpp  tensor.cpp  titaninfer_c.cpp
src/engine/: cluster_controller.cpp  dynamic_batcher.cpp  fusion.cpp  inference_engine.cpp  model_compiler.cpp  model_server.cpp  thread_pool.cpp
src/io/: model_parser.cpp  model_serializer.cpp
src/layers/: activation_layer.cpp  conv2d_layer.cpp  dense_layer.cpp  flatten_layer.cpp  fused_layers.cpp  pooling_layers.cpp  quantized_dense_layer.cpp  sequential.cpp
src/ops/: activations.cpp  conv_ops.cpp  matrix_ops.cpp  matrix_ops_simd.cpp  quantized_ops.cpp
tests/: CMakeLists.txt  quantization_test.cpp  tensor_test.cpp
tests/api/: test_api.cpp
tests/engine/: dynamic_batcher_test.cpp  fusion_test.cpp  inference_engine_test.cpp  model_compiler_test.cpp  test_cluster_controller.cpp  test_model_server.cpp  thread_pool_test.cpp
tests/io/: conv_serialization_test.cpp  serialization_test.cpp
tests/layers/: conv2d_test.cpp  flatten_test.cpp  layer_test.cpp  pooling_test.cpp  sequential_test.cpp
tests/ops/: activations_test.cpp  matrix_ops_simd_test.cpp  matrix_ops_test.cpp
